# lerobot-isaac-configs

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml
docs/: API.md  EXAMPLES.md  INTERNALS.md
src/lerobot_isaac_configs/: __init__.py  loader.py
src/lerobot_isaac_configs/configs/: isaac_so101_pickplace.yaml  policy_act.yaml  policy_diffusion.yaml  policy_smolvla.yaml  wm_dreamerv3.yaml  wm_leworldmodel.yaml
src/lerobot_isaac_configs/configs/batches/: example.yaml
tests/: test_loader.py  test_yaml_configs.py
