[project]
name = "lerobot-isaac-configs"
version = "0.1.0"
description = "Shared YAML/Hydra configs for lerobot-isaac packages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_isaac_configs"]
# configs/ now lives inside src/lerobot_isaac_configs/configs/ and is
# included automatically as part of the package tree — no artifacts needed.

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
